<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.fragments.signupfragment.SignUpFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/__88sdp"
        android:layout_marginHorizontal="@dimen/__24sdp"
        android:paddingHorizontal="@dimen/__32sdp"
        android:text="@string/heading"
        android:textColor="@color/black"
        android:textSize="@dimen/_28ssp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/disc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_16sdp"
        android:text="@string/description"
        app:layout_constraintTop_toBottomOf="@id/heading"
        android:layout_marginHorizontal="@dimen/__16sdp"
        android:paddingHorizontal="@dimen/__16sdp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_name"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/user_name"
        android:layout_marginTop="@dimen/__32sdp"
        app:boxStrokeColor="@color/black"
        app:startIconDrawable="@drawable/ic_mail"
        app:layout_constraintTop_toBottomOf="@id/disc"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="108dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:paddingStart="@dimen/__48sdp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/email"
        android:layout_marginTop="@dimen/__32sdp"
        app:boxStrokeColor="@color/black"
        app:startIconDrawable="@drawable/ic_mail"
        app:layout_constraintTop_toBottomOf="@id/user_name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingStart="@dimen/__48sdp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="16dp"
        app:startIconDrawable="@drawable/group"
        android:hint="@string/password"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:paddingStart="@dimen/__48sdp"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/confirm_password"
        app:startIconDrawable="@drawable/group"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/password">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:paddingStart="@dimen/__48sdp"
        android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/pb_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:indicatorColor="@color/black"
        android:layout_marginTop="@dimen/__16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSignUp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:background="@drawable/background"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="@dimen/__108sdp"
        app:layout_constraintTop_toBottomOf="@id/et_confirm_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="@dimen/__8sdp"
        app:cornerRadius="@dimen/_24sdp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_marginBottom="38dp"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>